--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,37 @@
 name: scivision
 channels:
   - conda-forge
-  - anaconda
+  - defaults
 dependencies:
   - python=3.9
-  - jupyter
-  - pip
+  - black=21.4b2 
+  - chex=0.1.6  
+  - dm-tree=0.1.7
+  - flax=0.3.3
+  - jax=0.2.10
+  - jupyter=1.0.0 
+  - keras=2.10.0
+  - libclang=15.0.7
+  - onnx=1.13.1
+  - onnxconverter-common=1.13.0
+  - optax=0.1.4
+  - pip=23.0.1 
+  - protobuf=4.21.12
+  - pytorch=1.13.1
+  - tensorboard=2.10.1
+  - tensorflow=2.10.0
+  - tensorflow-cpu=2.10.0
+  - tensorflow-estimator=2.10.0
+  - tensorflow-hub=0.12.0
+  - tf2onnx=1.13.0
+  - timm=0.6.11
+  - tokenizers=0.12.1
+  - torchvision=0.12.0 
+  - transformers=4.19.0
   - pip:
-    - scivision
+    - intake==0.6.8
+    - intake-xarray==0.6.1
+    - keras-nlp==0.2.0
+    - scikit-image==0.20.0
+    - tensorflow-text==2.10.0
+    - git+https://github.com/alan-turing-institute/scivision@main#egg=scivision
